<resources>
    <string name="app_name">Eye Beacon</string>
    <string name="title_dashboard_feature">Dashboard Feature</string>
    <string name="title_login_feature">Login Feature</string>

    <string name="eye_beacon_string_logo">Eye-Beacon</string>


    <!--    dashboard-->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="No">NO</string>

    <string name="broadcast_device">Broadcast Device</string>

    <string name="bt_not_supported">Bluetooth is not supported on this device.</string>
    <string name="bt_ads_not_supported">Bluetooth Advertisements are not supported on this device.</string>

    <string name="refresh">Refresh</string>
    <string name="start_error_prefix">Start Advertising failed: Please don\'t turn off your bluetooth</string>
    <string name="start_error_already_started">already started.</string>
    <string name="start_error_too_large">data packet exceeded 31 Byte limit.</string>
    <string name="start_error_unsupported">not supported on this device.</string>
    <string name="start_error_internal">internal error.</string>
    <string name="start_error_too_many">too many advertisers.</string>
    <string name="bt_null">Error: Bluetooth object null</string>
    <string name="last_seen">Last Seen:</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">minute ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="empty_list">No devices found - refresh to try again.</string>
    <string name="seconds">seconds.</string>
    <string name="scan_start_toast">Scanning for</string>
    <string name="already_scanning">Scanning already started.</string>
    <string name="no_name">(no name)</string>
    <string name="start_error_unknown">unknown error</string>
    <string name="advertising_timedout">Advertising stopped due to timeout.</string>
    <string name="bt_notif_title">Advertising device via Bluetooth</string>
    <string name="bt_notif_txt">Bluetooth Notif Desc</string>
    <string name="title_login_module">Module Title</string>
    <string name="title_dashboard_module">Dashboard Module</string>

    <string name="eye_beacon">Eye Beacon</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="greeting">Hello,</string>
    <string name="position">position</string>
    <string name="uuid">UUID</string>
    <string name="sample_uuid"> 96b1d074-eecf-426b-94af-21f622b8cf27</string>
    <string name="room_title">You\'re in</string>
    <string name="sample_room">A344</string>
    <string name="sample_number_room">5</string>
    <string name="sample_date">17-August-2021</string>
    <string name="sample_time">09.00 AM</string>
    <string name="sample_item_room_description">You\'re entered in A</string>
    <string name="title_feature_sample">Feature Sample</string>
    <string name="dashboard_stop_advertising">Stop Advertising</string>
    <string name="dashboard_stop_bluetooth_activity">Stop Bluetooth Activity</string>
    <string name="dashboard_start_bluetooth_activity">Start Bluetooth Activity</string>

    <string name="dashboard_log_not_found">Log Not Found</string>
    <string name="dashboard_error_uuid_description">uuid is wrong format, please check again your uuid!</string>


    <!--login page-->
    <string name="login_login_description">login</string>
    <string name="login_password_description">password</string>
    <string name="login_username_description">username</string>
    <string name="login_register_description">Don\'t have an account? Register</string>
    <string name="login_uuid_description">uuid</string>
    <string name="login_error_uuid_description">uuid is wrong format, please check again your uuid!</string>
    <string name="login_request_permission_msg">Please allow location permission!</string>
    <string name="login_request_permission_btn_title">Permission request</string>

    <!--common-->
    <string name="close">Close</string>

    <string name="register_description">Register your account,</string>
    <string name="register_full_name">Full Name</string>
    <string name="register_small_description">Sign up to get started eye-beacon!</string>
    <string name="register_email_id">Email ID</string>
    <string name="register_password">Password</string>
    <string name="register_button_register_description">Register</string>
    <string name="register_position_text">Position</string>
    <string name="register_confirm_password_text">Confirm Password</string>
    <string name="register_login_description">Already have an Account? Login</string>
    <string name="register_privacy_agreement_text">Privacy Agreement</string>
    <string name="privacy_agreement_accept_text">Accept</string>
    <string name="local_ip">Local IP</string>
    <string name="login_error_form">Please Fill Data</string>
    <string name="dashboard_dialog_sign">SIGN</string>
    <string name="dashboard_dialog_stop">STOP</string>
    <string name="dashboard_dialog_title">You are still in room.\nSystem will automatically change your status to Sign In.</string>
    <string name="dashboard_success_msg">Sign in Successfully</string>
    <string name="position_hard_code">Main Developer</string>
    <string name="endpoint">Endpoint</string>
    <string name="mac_address">Mac Address</string>
</resources>