<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_register_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:text="@string/register_description"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_register_small_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/register_small_description"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_register_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/register_full_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="16dp"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_register_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/register_position_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="16dp"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_register_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/register_email_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/register_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_register_confirm_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/register_confirm_password_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_register_privacy_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_register_privacy_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/checkbox_register_privacy_agreement"
                android:layout_centerVertical="true"
                android:textColorLink="@color/white"
                android:text="@string/register_privacy_agreement_text"
                android:textSize="16sp" />

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:padding="16dp"
            android:text="@string/register_button_register_description"
            android:textColor="@color/black" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_login_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/register_login_description"
            android:textColor="?attr/colorOnSecondary"
            android:textColorLink="?attr/linkColor"
            android:textSize="16sp" />

    </LinearLayout>


</ScrollView>