<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.luthtan.eye_beacon_android.domain.entities.dashboard.BleEntity" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginBottom="8dp"
        android:paddingHorizontal="16dp"
        app:cardBackgroundColor="?attr/colorSecondary"
        app:cardCornerRadius="6dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="@{model.date}"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    tools:text="@string/sample_date" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_item_dashboard_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{model.timeIn}"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    tools:text="@string/sample_time" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_item_dashboard_room_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@{`You're entered in ` + model.room}"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/sample_item_room_description" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

</layout>