<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.luthtan.eye_beacon_android.features.login.LoginViewModel" />
        <variable
            name="listener"
            type="com.luthtan.eye_beacon_android.features.login.LoginListener" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                style="@style/Widget.MaterialComponents.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/eye_beacon_string_logo"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginBottom="24dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/primaryLightColor"
                app:cardCornerRadius="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginUUID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/mac_address"
                    android:inputType="text"
                    android:padding="16dp"
                    errorText="@{viewModel.errorForm.uuid}"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_baseline_bluetooth_searching"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/white"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:cardBackgroundColor="@color/primaryLightColor"
                app:cardCornerRadius="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginLocalIP"
                    android:layout_width="match_parent"
                    errorText="@{viewModel.errorForm.localIP}"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:padding="16dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_baseline_link_24"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/white"
                    android:hint="@string/endpoint"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/primaryLightColor"
                app:cardCornerRadius="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginUsername"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:padding="16dp"
                    errorText="@{viewModel.errorForm.username}"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_baseline_person_outline"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/white"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="16dp"
                android:text="@string/login_login_description"
                android:onClick="@{() -> viewModel.onClickGoToDashboard(etLoginUUID.getText().toString(),etLoginLocalIP.getText().toString(),etLoginUsername.getText().toString())}"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_test_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </FrameLayout>


</layout>
