<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.luthtan.eye_beacon_android.features.dashboard.DashboardViewModel" />

        <variable
            name="listener"
            type="com.luthtan.eye_beacon_android.features.dashboard.DashboardListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondaryColor">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/dashboard_dialog_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:text="@{viewModel.countDown != 0?``+viewModel.countDown:`0`}"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="32dp"
            android:background="@color/secondaryDarkColor"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/desc" />

        <View
            android:id="@+id/divider2"
            android:layout_width="0.5dp"
            android:layout_height="0dp"
            android:background="@color/secondaryDarkColor"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnRight"
            app:layout_constraintStart_toEndOf="@id/btnLeft"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLeft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_white8_bottom_left"
            android:text="@string/dashboard_dialog_stop"
            android:textColor="@color/btnColorText"
            android:textStyle="bold"
            android:onClick="@{() -> viewModel.onLeftDialogClicked()}"
            app:layout_constraintEnd_toStartOf="@+id/divider2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_white8_bottom_right"
            android:text="@string/dashboard_dialog_sign"
            android:textColor="@color/btnColorText"
            android:onClick="@{() -> viewModel.onRightDialogClicked()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider2"
            app:layout_constraintTop_toBottomOf="@+id/divider1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>